Game settings input is now handled correctly in creation #76 and updating #77 and visible character count implemented #78

--- a/src/styles/views/GameCreate.scss
+++ b/src/styles/views/GameCreate.scss
@@ -45,7 +45,12 @@
     display: flex;
     justify-content: center;
     margin-top: 2em;
-    margin-bottom: -1em;
+    margin-bottom: 0.5em;
     width: 100%;
+  }
+  &.character-count {
+    font-size: 12px;
+    color: #666;
+    margin-top: 4px;
   }
 }
