--- a/src/styles/views/GameGuess.scss
+++ b/src/styles/views/GameGuess.scss
@@ -45,6 +45,11 @@
     margin-bottom: -1em;
     width: 50%;
   }
+  &.character-count {
+    font-size: 12px;
+    color: #666;
+    margin-top: 2px;
+  }
 }
 .guessTime {
   margin-top: 2em;
